[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvamp-loss"
version = "1.0.0"
description = "Normalized Variance-Aware Max-Penalized Loss for PyTorch"
readme = "README.md"
authors = [
    {name = "Mariusz Kurman", email = "mariusz.kurman@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["deep-learning", "pytorch", "loss-function", "nlp", "transformers"]
dependencies = [
    "torch>=1.8.0",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/mkurman/nvamp-loss"
"Bug Tracker" = "https://github.com/mkurman/nvamp-loss/issues"

[tool.setuptools]
packages = ["nvamp"]